Solution for module3 (Text-align issue)

--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -98,7 +98,6 @@ body {
 }
 
 #main-content section h3 {
-    text-align: center;
     margin-top: 0;
     margin-bottom: 15px;
 }
